# rust-vm

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: bus.rs  constants.rs  error.rs  lib.rs  main.rs  memory.rs  register.rs  utils.rs  vm.rs  zk.rs
