[package]
name = "rust-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
light-poseidon = "0.4.0"
derive_more = { version = "2.1.1", features = ["from", "display"] }
sha2 = "0.10.9"
wincode = "0.2.5"
wincode-derive = "0.2.3"
num-bigint = "0.4.6"
ark-ff = "0.5.0"
dotenv = "0.15.0"
